--- a/Project-0/To-Do App/styles.css
+++ b/Project-0/To-Do App/styles.css
@@ -40,6 +40,11 @@ ul {
 .button {
   padding: 10px 20px;
 }
+.delete-button {
+  width: 100px;
+  height: 60px;
+  padding: 20px;
+}
 
 .todo-list {
   flex: 1 1 0;
@@ -56,6 +61,10 @@ ul {
   margin: 10px;
   width: 10px;
   height: 10px;
+}
+.check {
+  width: 50px;
+  height: 50px
 }
 
 .todo-container {
